Prevent text size adjustments on mobile browsers
Our use of `float: right;` causes some mobile browsers to increase the
font size of code blocks. Adding `text-size-adjust: none;` seems to fix
the issue.

Closes gh-9

--- a/src/main/css/generic.css
+++ b/src/main/css/generic.css
@@ -23,3 +23,7 @@ html {
 *:after {
   box-sizing: inherit;
 }
+
+body {
+  text-size-adjust: none;
+}
